# torch-autograd

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  autograd-core-old.py  autograd-scm-1.rockspec  autograd.lua  gradcheck.lua  init.lua  loss.lua  main.lua  model.lua  nnfunc.lua  nnfuncwrapper.lua  node.lua  number.lua  ops.lua  test.lua  util.lua
benchmark/: benchmark.lua
examples/: get-mnist.lua  get-penn.lua  print-dotfile.lua  print-generatedcode.lua  test-linear.lua  train-mnist-autoencoder.lua  train-mnist-classification.lua  train-mnist-cnn.lua  train-mnist-logistic.lua  train-mnist-mlp.lua  train-mnist-regression.lua  train-mnist.lua  train-penn-lstm-testCase.lua  train-penn-lstm.lua  train-penn-rnn.lua
src/: Debugger.lua  Node.lua  Profiler.lua  Source.lua  StringBuilder.lua  Value.lua  gradcheck.lua  gradfuns.lua  init.lua  loss.lua  main.lua  model.lua  nnfuncwrapper.lua  nnwrapper.lua  node.lua  overload.lua  support.lua  util.lua
src/auto/: AutoCriterion.lua  AutoModule.lua  init.lua
src/direct/: DirectNode.lua  DirectTape.lua
src/loss/: init.lua
src/model/: AlexNet.lua  LayerNormalization.lua  NeuralNetwork.lua  init.lua  (+6 more)
test/: basic.lua  setup-data.lua  test-cuda-dot-nonlin.lua  test-dot-nonlin.lua  test-dot.lua  test-mnist-regression.lua  test-mnist.lua  test-multiple-call-table-2.lua  test-multiple-call-table.lua  test-multiple-call-tensor.lua  test-pow-mul.lua  test-pow.lua  test-scale.lua  test-sum-then-sum.lua  test-sum.lua  test-table.lua  test-torch-mul.lua  test-torch-scale.lua  test-unm.lua  test.lua  test_Debugger.lua
(+34 files in other folders)
